--- a/aboly.html
+++ b/aboly.html
@@ -1115,7 +1115,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#3.1">3.1</a></div>
 <div class="lybloboriginaltext"><p>孔子谓<a href="#jishi">季氏</a>：“八佾舞于庭，是可忍也，孰不可忍也？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">谓</span>：评论，评说。句式“A谓B”的意思是A评论B，“A谓B曰”是A对B说。<span class="lyexample"><span>【例】</span><span><a href="#13.8" class="lyref">13.8</a> <span class="lyq">子谓卫公子荆善居室。</span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span>唯一的特例是 <a href="#9.21" class="lyref">9.21</a> 。</p></li>
+<li><p><span class="lyterm">谓</span>：评论，评说。句式“A谓B”的意思是A评论B，“A谓B曰”是A对B说。<span class="lyexample"><span>【例】</span><span><a href="#13.8" class="lyref">13.8</a> <span class="lyq">子谓卫公子荆善居室。</span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span><a href="#9.21" class="lyref">9.21</a>  是唯一的特例。</p></li>
 <li>
 <p><span class="lyterm">八佾（<span class="lypinyin">yì</span>）</span>：8×8人的舞蹈方阵。<span class="lyterm">佾</span>：乐舞的队列。据《左传·隐公五年》，天子才可用八佾，诸侯用六佾，卿大夫用四佾，士用二佾。因为<a href="#zhougong">周公</a>的功德，鲁国也被特许使用八佾。季氏作为卿大夫而用八佾，是<a href="#zhengming">非分越礼</a>的。</p>
 <a id="jianyongbayi"></a><div class="lyseealso">
@@ -3305,7 +3305,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>入公门，鞠躬如也，如不容。立不中门，行不履阈。过位，色勃如也，足躩如也，其言似不足者。摄齐升堂，鞠躬如也，屏气似不息者。出，降一等，逞颜色，怡怡如也。没阶，趋进，翼如也。复其位，踧踖如也。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">公门</span>：国君的外门。</p></li>
-<li><p><span class="lyterm">鞠（<span class="lypinyin">jū</span>）<a href="#gong1a">躬</a></span>：弯腰行礼，引申为形容恭敬谨慎的样子。<span class="lyterm">鞠</span>：弯曲。<span class="lyexample"><span>【例】</span><span>《史记·韩长孺列传》结尾：<span class="lyq">壶遂之内<a href="#lian2">廉</a>行修，斯鞠躬君子也。</span>（壶遂：汉武帝时的上大夫，曾与司马迁等议造《<a href="#lifa">太初历</a>》。修：美，善。）</span></span></p></li>
+<li><p><span class="lyterm">鞠<a href="#gong1a">躬</a></span>：弯腰行礼，引申为形容恭敬谨慎的样子。<span class="lyterm">鞠</span>：弯曲。<span class="lyexample"><span>【例】</span><span>《史记·韩长孺列传》结尾：<span class="lyq">壶遂之内<a href="#lian2">廉</a>行修，斯鞠躬君子也。</span>（壶遂：汉武帝时的上大夫，曾与司马迁等议造《<a href="#lifa">太初历</a>》。修：美，善。）</span></span></p></li>
 <li><p><span class="lyterm">立不中门，行不履阈</span>（<span class="lypinyin">yù</span>）：站立的时候不站在门中间，走路的时候不踩到门槛。</p></li>
 <li><p><span class="lyterm">过位</span>：指经过国君的座位。</p></li>
 <li>
@@ -3438,7 +3438,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#10.15">10.15</a></div>
 <div class="lybloboriginaltext"><p>问人于他邦，再拜而送之。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">问人于他邦</span>：指（托人）向远在别国的亲友（带去）问候。<span class="lyterm"><a href="#zaibai">再拜</a></span>见 <a href="#9.3" class="lyref">9.3</a> <a href="#zaibai">注</a>。</p></li>
+<li><p><span class="lyterm">问人于他邦</span>：指（托人）向远在别国的亲友（带去）问候。<span class="lyterm">再拜</span>见 <a href="#9.3" class="lyref">9.3</a> <a href="#zaibai">注</a>。</p></li>
 <li><p><span class="lyterm">之</span>：指受托传话的人。</p></li>
 </ul></div>
 </div>
@@ -3504,7 +3504,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>朋友之馈，虽车马，非祭肉，不拜。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><span class="lyterm">车马</span>乃财物之重，朋友有<a href="#tongcaizhiyi">通财之义</a>。</p>
-<p><span class="lyterm"><a href="#jirou">祭肉</a></span>乃礼之重，见祭肉如见祖先。<span class="lyseealso"><span>【参】</span><span><a href="#3.12" class="lyref">3.12</a> </span></span></p>
+<p><span class="lyterm"><a href="#jirou">祭肉</a></span>乃礼之重，见祭肉如见祖先。<span class="lyseealso"><span>【参】</span><span><a href="#3.12" class="lyref">3.12</a> <span class="lyq">祭如在。</span></span></span></p>
 </li></ul></div>
 </div>
 <a id="10.24"></a><div class="lyblob">
@@ -4272,7 +4272,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#ranqiu">冉子</a>退朝。子曰：“何晏也？”对曰：“有政。”子曰：“其事也。如有政，虽不吾以，吾其与闻之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">晏</span>（<span class="lypinyin">yàn</span>）：晚，迟。<span class="lyexample"><span>【例】</span><span>陆游《寓叹》：<span class="lyq">老生读书百<a href="#weibiansanjue">绝编</a>，日晏忘食夜废眠。</span></span></span></p></li>
-<li><p><span class="lyterm">其事也</span>：恐怕是（季氏的）家事吧。政是国政，事是私事，这是孔子讽刺季氏公私不分，操持权柄。</p></li>
+<li><p><span class="lyterm"><a href="#qi2a">其</a>事也</span>：恐怕是（季氏的）家事吧。政是国政，事是私事，这是孔子讽刺季氏公私不分，操持权柄。</p></li>
 <li><p><span class="lyterm">不吾以</span>：“<a href="#nov">NOV</a>”的倒装结构，不用我（当官）了。<a id="yi3"></a><span class="lyterm">以</span>：动词，任用，使用。</p></li>
 </ul></div>
 </div>
@@ -4515,8 +4515,8 @@ img.characterimg {
 <li><p><a id="zixi"></a><span class="lyterm">子西</span>：指郑国卿公孙夏，字子西，谥号是襄（“因事有功曰襄”），政绩上并不突出。子产是他的同宗兄弟，接任他主政。</p></li>
 <li><p><span class="lyterm">彼哉，彼哉！</span>：他啊，他啊！表示无足称道。</p></li>
 <li><p><span class="lyterm">人也</span>：前面似乎缺了一个字来评价管仲，只好理解成“人才啊”。也有根据 <a href="#14.16" class="lyref">14.16</a> <a href="#14.17" class="lyref">14.17</a>  孔子对管仲的称赞，认为“人”通“仁”，但结合下一句就显勉强。可以参考孔子对于<a href="#zigao">子羔</a>的评价。</p></li>
-<li><p><span class="lyterm">伯氏</span>：齐国大夫伯偃，<span class="lyterm">骈（<span class="lypinyin">pián</span>）邑</span>是他的<a href="#jia1">封邑</a>，<span class="lyterm">三百</span>指300家百姓。后面的主语都是伯氏。</p></li>
-<li><p><span class="lyterm">没（<span class="lypinyin">mò</span>）齿</span>：终身。<span class="lyexample"><span>【例】</span><span>成语“没齿不忘”。</span></span><span class="lyterm">没齿无怨言</span>应是因为管仲裁处公正，令人心服，具体情况已不可考。<span class="lyseealso"><span>【参】</span><span>据《三国志·蜀书》廖立传、李严传，蜀国校尉廖立自负才名，妄议国士，督粮官李平（即李严）运粮不力，谎言推诿，都被诸葛亮削职为民。二人一直企望重获他的认可，可几年后诸葛亮病故，于是廖立<span class="lyq">垂泣叹曰：“吾终为<a href="#zuoren">左衽</a>矣！”</span>李平更是激愤发病而死。东晋习凿齿评价：<span class="lyq">昔管仲夺伯氏骈邑三百，没齿而无怨言，圣人以为难。诸葛亮之使廖立垂泣，李平致死，岂徒无怨言而已哉！夫水至平而邪者取法，镜至明而丑者无怒。水镜之所以能穷物而无怨者，以其无私也。……诸葛亮于是可谓能用刑矣！自秦汉以来，未之有也。</span></span></span></p></li>
+<li><p><span class="lyterm">伯氏</span>：齐国大夫伯偃，<span class="lyterm">骈（<span class="lypinyin">pián</span>）邑</span>是他的<a href="#jia1">封邑</a>，在今山东省潍坊市临朐（<span class="lypinyin">qú</span>）县。<span class="lyterm">三百</span>指300家百姓。后面的主语都是伯氏。</p></li>
+<li><p><span class="lyterm"><a href="#mo4a">没</a>齿</span>：至死，终身。<span class="lyterm">齿</span>：寿数，年龄。<span class="lyexample"><span>【例】</span><span>成语“没齿不忘”。</span></span><span class="lyterm">没齿无怨言</span>应是因为管仲裁处公正，令人心服，具体情况已不可考。<span class="lyseealso"><span>【参】</span><span>据《三国志·蜀书》廖立传、李严传，蜀国校尉廖立自负才名，妄议国士，督粮官李平（即李严）运粮不力，谎言推诿，都被诸葛亮削职为民。二人一直企望重获他的认可，可几年后诸葛亮病故，于是廖立<span class="lyq">垂泣叹曰：“吾终为<a href="#zuoren">左衽</a>矣！”</span>李平更是激愤发病而死。东晋习凿齿评价：<span class="lyq">昔管仲夺伯氏骈邑三百，没齿而无怨言，圣人以为难。诸葛亮之使廖立垂泣，李平致死，岂徒无怨言而已哉！夫水至平而邪者取法，镜至明而丑者无怒。水镜之所以能穷物而无怨者，以其无私也。……诸葛亮于是可谓能用刑矣！自秦汉以来，未之有也。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="14.10"></a><div class="lyblob">
@@ -4560,7 +4560,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">成人</span>：成为真正的人。子路的问和孔子第一句的答都是指完满无缺憾的人，是孔子理想中全面发展的精英；第二句的答是指无愧为人的人，仅坚持了道德品格方面的要求，可见孔子教育理念之大端。</p></li>
 <li><p><span class="lyterm">卞庄子</span>：春秋时期鲁国<a id="bianyi"></a>卞邑（在今山东省济宁市泗水县）的勇士，曾使伐鲁的齐军闻名而不敢从卞经过。据《韩诗外传》第10卷第13章，母亲在世时，他连续3次从战场上逃生，受人羞辱而不变色。母亲去世后第3年又爆发战争，他主动请命，连斩3名敌军首级回来以抵败逃之耻，并认为<span class="lyq"><a href="#jie2">节</a>士不以辱生</span>，再次冲入敌阵，连杀70余人而死。他还有坐山观虎斗从而一举杀二虎的智谋，事见《战国策·秦策二·楚绝齐》。</p></li>
-<li><p><span class="lyterm">何必然？</span>：为什么一定这样呢？即不必如此高标准严要求，感慨之情呼之欲出。</p></li>
+<li><p><span class="lyterm">何必然？</span>：为什么一定这样呢？即不必如此高标准严要求，感慨之情呼之欲出。可以与 <a href="#13.20" class="lyref">13.20</a> <span class="lyq">今之从政者何如？</span>相比较。</p></li>
 <li><p><a id="shouming"></a><span class="lyterm">授命</span>：献出生命，指的是具备这样的思想觉悟。<a id="shou4"></a><span class="lyterm">授</span>：给予，交出。</p></li>
 <li><p><span class="lyterm">要</span>（<span class="lypinyin">yāo</span>）：通“<a href="#yue1">约</a>”，穷困。<span class="lyseealso"><span>【参】</span><span><a href="#5.22" class="lyref">5.22</a> <a href="#buwangqichu">所引</a>《史记》。</span></span></p></li>
 </ul></div>
@@ -4628,7 +4628,7 @@ img.characterimg {
 </li>
 <li><p><a id="kuang1"></a><span class="lyterm">匡</span>（<span class="lypinyin">kuāng</span>）：正，纠正。<span class="lyexample"><span>【例】</span><span>成语“匡时济世”。</span></span></p></li>
 <li><p><span class="lyterm">微</span>：副词，用于名词之前，构成表示假设、让步的分句，要是没有。<span class="lyexample"><span>【例】</span><span>范仲淹《岳阳楼记》：<span class="lyq">微斯人，吾谁与归？</span>《战国策·中山策·昭王既息民缮兵》：<span class="lyq">微白起，吾不能灭赵乎？</span></span></span></p></li>
-<li><p><span class="lyterm">被（<span class="lypinyin">pī</span>）发左衽（<span class="lypinyin">rèn</span>）</span>：披散头发、身着异族服装，指沦落成未开化的<a href="#yidihuaxia">野蛮人</a>。这里推崇的是管仲辅佐齐桓公“尊王<a href="#rang3">攘</a>夷”的业绩，包括救<a href="#shaogong">燕</a>于山戎、救<a href="#kangshu">卫</a>于狄等，事见《史记·齐太公世家》。<a id="pi1"></a><span class="lyterm">被</span>：通“披”。<a id="zuoren"></a><span class="lyterm">衽</span>：上衣前胸处交领的部分。传统汉服以左前襟压右前襟，称为右衽，反之则为<span class="lyterm">左衽</span>，是当时周边少数民族的习俗，也是汉族寿衣的穿法。</p></li>
+<li><p><span class="lyterm">被（<span class="lypinyin">pī</span>）发左衽（<span class="lypinyin">rèn</span>）</span>：披散头发、身着异族服装，指沦落成未开化的<a href="#yidihuaxia">野蛮人</a>。这里推崇的是管仲辅佐齐桓公“尊王<a href="#rang3">攘</a>夷”的业绩，包括救<a href="#shaogong">燕</a>于山戎、救<a href="#kangshu">卫</a>于狄等，事见《史记·齐太公世家》。<a id="pi1"></a><span class="lyterm">被</span>：通“披”，分散，覆盖。<a id="zuoren"></a><span class="lyterm">衽</span>：上衣前胸处交领的部分。传统汉服以左前襟压右前襟，称为右衽，反之则为<span class="lyterm">左衽</span>，是当时周边少数民族的习俗，也是汉族寿衣的穿法。</p></li>
 <li><p><a id="liang4"></a><span class="lyterm">谅</span>：本义为诚信，引申指目光短浅的固执、狭隘。<span class="lyexample"><span>【例】</span><span><a href="#16.4" class="lyref">16.4</a> <span class="lyq">友直、友谅、友多闻，益矣。</span><a href="#15.37" class="lyref">15.37</a> <span class="lyq">君子贞而不谅。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#9.4" class="lyref">9.4</a> <a href="#19.11" class="lyref">19.11</a> </span></span></p></li>
 <li><p><span class="lyterm">自经于沟渎</span>：上吊死在荒野小山沟。<a id="goudu"></a><span class="lyterm">沟渎</span>：田间水道，比喻默默无闻的小地方，意思是死得轻于鸿毛。</p></li>
 </ul></div>
@@ -5527,7 +5527,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子谓<a href="#li">伯鱼</a>曰：“女为《周南》、《召南》矣乎？人而不为《周南》、《召南》，其犹正墙面而立也与！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm"><a href="#wei2b">为</a></span>（<span class="lypinyin">wéi</span>）：指学。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> </span></span></p></li>
-<li><p><a id="zhounan"></a><span class="lyterm">《周南》</span>、<span class="lyterm">《召（<span class="lypinyin">shào</span>）南》</span>是《诗经》开头的两章，共25首。在《国风》里，只有这两章不对应于特定的国家，而是<a href="#zhougong">周</a>、<a href="#shaogong">召</a>二公分陕而治的南国地区。<span class="lyseealso"><span>【参】</span><span><a href="#jizhaguanyue">季札</a>在鲁国观周乐时，对它们的评价是：<span class="lyq">美哉！始基之矣，犹未也。然勤而不怨矣。</span>（基：有基础。未：未完善。）刘宝楠《论语正义》认为：<span class="lyq">二《南》皆言夫妇之道，为<a href="#wangdao">王化</a>之始。故君子反身必先修诸己，而后可“刑于寡妻，至于兄弟，以御于家邦”。</span>（所引句出自《诗经·大雅·思齐》，原诗是赞颂<a href="#wen">文王</a>之德。刑：通“型”，示范。寡：王侯的谦称，此指文王。）</span></span></p></li>
+<li><p><a id="zhounan"></a><span class="lyterm">《周南》</span>、<span class="lyterm">《召（<span class="lypinyin">shào</span>）南》</span>是《诗经》开头的两章，共25首。在《国风》里，只有这两章不对应于特定的国家，而是<a href="#zhougong">周</a>、<a href="#shaogong">召</a>二公分陕而治的南国地区。<span class="lyseealso"><span>【参】</span><span>唐初陆德明《经典释文·毛诗音义》：<span class="lyq">南者，言周之德化自<a href="#taibo">岐</a>阳而先<a href="#pi1">被</a>南方。</span>（阳：山的南面。）<a href="#jizhaguanyue">季札</a>在鲁国观周乐时，对《周南》、《召南》的评价是：<span class="lyq">美哉！始基之矣，犹未也。然勤而不怨矣。</span>（基：有基础。未：未完善。）刘宝楠《论语正义》认为：<span class="lyq">二《南》皆言夫妇之道，为<a href="#wangdao">王化</a>之始。故君子反身必先修诸己，而后可“刑于寡妻，至于兄弟，以御于家邦”。</span>（所引句出自《诗经·大雅·思齐》，原诗是赞颂<a href="#wen">文王</a>之德。刑：通“型”，示范。寡：王侯的谦称，此指文王。）</span></span></p></li>
 <li><p><span class="lyterm">正墙面而立</span>：面对着墙壁贴近站着。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">即其至近之地，而一物无所见，一步不可行。</span>这个比喻可能是周朝的习惯说法，如《尚书·周书·周官》（伪）中，<a href="#chengwang">周成王</a>告诫百官：<span class="lyq">不学墙面，<a href="#li4">莅</a>事惟烦。</span>西汉孔安国注：<span class="lyq">人而不学，其犹正墙面而立，临政事必烦。</span>《宋史·王显传》载，宋太祖曾对时任枢密使的王显说：<span class="lyq">卿世家本儒，少遭乱失学，今<a href="#dian3">典</a>朕机务，无暇博览群书，能熟读《军戒》三篇，亦可免于面墙矣。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -6314,6 +6314,7 @@ img.characterimg {
 <p><span class="lytopic">不为</span>（10章）：<a href="#7.21" class="lyref">7.21</a> <a href="#9.4" class="lyref">9.4</a> <a href="#11.11" class="lyref">11.11</a> <a href="#12.1" class="lyref">12.1</a> <a href="#12.2" class="lyref">12.2</a> <a href="#12.23" class="lyref">12.23</a> <a href="#13.4" class="lyref">13.4</a> <a href="#13.17" class="lyref">13.17</a> <a href="#14.43" class="lyref">14.43</a> <a href="#16.7" class="lyref">16.7</a> </p>
 <p><span class="lytopic">耻</span>（10章）：<a href="#2.3" class="lyref">2.3</a> <a href="#4.22" class="lyref">4.22</a> <a href="#5.15" class="lyref">5.15</a> <a href="#5.25" class="lyref">5.25</a> <a href="#8.13" class="lyref">8.13</a> <a href="#9.27" class="lyref">9.27</a> <a href="#13.20" class="lyref">13.20</a> <a href="#14.1" class="lyref">14.1</a> <a href="#14.20" class="lyref">14.20</a> <a href="#14.27" class="lyref">14.27</a> </p>
 <p><span class="lytopic">才能</span>（10章）：<a href="#4.14" class="lyref">4.14</a> <a href="#5.4" class="lyref">5.4</a> <a href="#5.17" class="lyref">5.17</a> <a href="#9.6" class="lyref">9.6</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.19" class="lyref">11.19</a> <a href="#13.5" class="lyref">13.5</a> <a href="#13.8" class="lyref">13.8</a> <a href="#14.30" class="lyref">14.30</a> <a href="#14.33" class="lyref">14.33</a> </p>
+<p><span class="lytopic">古今</span>（10章）：<a href="#3.16" class="lyref">3.16</a> <a href="#4.22" class="lyref">4.22</a> <a href="#6.16" class="lyref">6.16</a> <a href="#7.1" class="lyref">7.1</a> <a href="#9.3" class="lyref">9.3</a> <a href="#13.20" class="lyref">13.20</a> <a href="#14.12" class="lyref">14.12</a> <a href="#14.24" class="lyref">14.24</a> <a href="#15.26" class="lyref">15.26</a> <a href="#17.16" class="lyref">17.16</a> </p>
 <p><a id="topickuaile"></a><span class="lytopic">快乐</span>（10章）：<a href="#1.1" class="lyref">1.1</a> <a href="#1.15" class="lyref">1.15</a> <a href="#4.2" class="lyref">4.2</a> <a href="#6.11" class="lyref">6.11</a> <a href="#6.20" class="lyref">6.20</a> <a href="#6.23" class="lyref">6.23</a> <a href="#7.14" class="lyref">7.14</a> <a href="#7.16" class="lyref">7.16</a> <a href="#7.19" class="lyref">7.19</a> <a href="#16.5" class="lyref">16.5</a> </p>
 <p><span class="lytopic">善恶</span>（10章）：<a href="#3.25" class="lyref">3.25</a> <a href="#4.4" class="lyref">4.4</a> <a href="#12.16" class="lyref">12.16</a> <a href="#12.21" class="lyref">12.21</a> <a href="#15.33" class="lyref">15.33</a> <a href="#16.4" class="lyref">16.4</a> <a href="#16.5" class="lyref">16.5</a> <a href="#16.11" class="lyref">16.11</a> <a href="#19.20" class="lyref">19.20</a> <a href="#20.2" class="lyref">20.2</a> </p>
 <p><span class="lytopic">怨</span>（10章）：<a href="#4.12" class="lyref">4.12</a> <a href="#5.23" class="lyref">5.23</a> <a href="#7.15" class="lyref">7.15</a> <a href="#12.2" class="lyref">12.2</a> <a href="#14.10" class="lyref">14.10</a> <a href="#14.34" class="lyref">14.34</a> <a href="#14.35" class="lyref">14.35</a> <a href="#15.15" class="lyref">15.15</a> <a href="#17.25" class="lyref">17.25</a> <a href="#20.2" class="lyref">20.2</a> </p>
@@ -6343,7 +6344,6 @@ img.characterimg {
 <p><span class="lytopic">愚</span>（5章）：<a href="#2.9" class="lyref">2.9</a> <a href="#5.21" class="lyref">5.21</a> <a href="#17.3" class="lyref">17.3</a> <a href="#17.8" class="lyref">17.8</a> <a href="#17.16" class="lyref">17.16</a> </p>
 <p><span class="lytopic">本末</span>（4章）：<a href="#1.2" class="lyref">1.2</a> <a href="#3.4" class="lyref">3.4</a> <a href="#19.11" class="lyref">19.11</a> <a href="#19.12" class="lyref">19.12</a> </p>
 <p><span class="lytopic">反省</span>（4章）：<a href="#1.4" class="lyref">1.4</a> <a href="#4.17" class="lyref">4.17</a> <a href="#5.27" class="lyref">5.27</a> <a href="#12.4" class="lyref">12.4</a> </p>
-<p><span class="lytopic">古今</span>（4章）：<a href="#7.1" class="lyref">7.1</a> <a href="#14.24" class="lyref">14.24</a> <a href="#15.26" class="lyref">15.26</a> <a href="#17.16" class="lyref">17.16</a> </p>
 <p><span class="lytopic">惑</span>（4章）：<a href="#9.29" class="lyref">9.29</a> <a href="#12.10" class="lyref">12.10</a> <a href="#12.21" class="lyref">12.21</a> <a href="#14.28" class="lyref">14.28</a> </p>
 <p><a id="topichui4"></a><span class="lytopic">惠</span>（4章）：<a href="#5.16" class="lyref">5.16</a> <a href="#14.9" class="lyref">14.9</a> <a href="#17.6" class="lyref">17.6</a> <a href="#20.2" class="lyref">20.2</a> </p>
 <p><span class="lytopic">亲</span>（4章）：<a href="#1.13" class="lyref">1.13</a> <a href="#8.2" class="lyref">8.2</a> <a href="#12.21" class="lyref">12.21</a> <a href="#18.10" class="lyref">18.10</a> </p>
