--- a/aboly.html
+++ b/aboly.html
@@ -547,7 +547,7 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">其为仁之本与</span>（<span class="lypinyin">yú</span>）。<a id="qi2a"></a><span class="lyterm">其</span>：用于谓语之前加强语气的副词（而不是代词），随后的谓语可以表示判断（多半，大概）、推测（将会，将要）、反问（难道，岂）、祈使（还是，应该）等。<span class="lyexample"><span>【例】</span><span><a href="#3.23" class="lyref">3.23</a> <span class="lyq">乐其可知也。</span><a href="#5.7" class="lyref">5.7</a> <span class="lyq">从我者其由与？</span><a href="#6.6" class="lyref">6.6</a> <span class="lyq">虽欲勿用，山川其舍诸？</span>《史记·田敬仲完世家》：<span class="lyq"><a href="#chenchengzi">田常</a>言于齐平公曰：“德施，人之所欲，君其行之；刑罚，人之所恶，臣请行之。”</span></span></span></p>
-<p><a id="yu2"></a><span class="lyterm">与</span>：句末语气词，可以表示感叹、疑问或反问，后来写作“欤”（<span class="lypinyin">yú</span>）。<span class="lyexample"><span>【例】</span><span><a href="#5.22" class="lyref">5.22</a> <span class="lyq">归与！归与！</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">君子人与？君子人也。</span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">先事后得，非崇德与？</span></span></span></p>
+<p><a id="yu2"></a><span class="lyterm">与</span>：句末语气词，可以表示感叹、疑问或反问，相当于稍重读的啊、呀、吗，后来写作“欤”（<span class="lypinyin">yú</span>）。<span class="lyexample"><span>【例】</span><span><a href="#5.22" class="lyref">5.22</a> <span class="lyq">归与！归与！</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">君子人与？君子人也。</span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">先事后得，非崇德与？</span></span></span></p>
 <p><a id="ren2"></a><span class="lyterm">仁</span>：人与人相亲相爱。字形结构是二人为仁，它是儒家思想的核心，衡量“真正的人”的第一标准。《论语》中出现的仁，有的是评价人的标准，有的是修行的目标，有的是仁的体现，有的指仁人，需要根据上下文具体把握。<span class="lyexample"><span>【例】</span><span><a href="#5.5" class="lyref">5.5</a> <span class="lyq">或曰：“雍也仁而不佞。”</span><a href="#6.7" class="lyref">6.7</a> <span class="lyq">回也，其心三月不违仁。</span><a href="#14.16" class="lyref">14.16</a> <span class="lyq">如其仁，如其仁！</span><a href="#1.6" class="lyref">1.6</a> <span class="lyq">泛爱众而亲仁。</span></span></span></p>
 <div class="lyseealso">
 <p><span>【参】</span><span>孔子开创性地将“仁”提高到人之至<a href="#de2">德</a>、总德的地位，以人为本，注重人与人之间的良性关系。《论语》从多方面阐述了仁，影响最大的要数 <a href="#6.30" class="lyref">6.30</a> <a href="#12.1" class="lyref">12.1</a> <a href="#12.22" class="lyref">12.22</a> 。这里摘录后世对仁的若干论述作为参考。</span></p>
@@ -1813,7 +1813,7 @@ img.characterimg {
 <li><p><span class="lyterm">昼寝</span>：白天睡大觉。</p></li>
 <li><p><span class="lyterm">粪土之墙</span>：用污泥脏土砌成的墙，质地混杂，表面很不平整，这在今天的农村仍能见到。连用这两个比喻，可见孔子的伤心失望。</p></li>
 <li><p><span class="lyterm">杇</span>（<span class="lypinyin">wū</span>）：粉刷墙壁用的泥抹子，这里作动词，粉饰，涂饰。</p></li>
-<li><p><span class="lyterm">于予与（<span class="lypinyin">yú</span>）何诛</span>。<a id="yu2a"></a><span class="lyterm">与</span>：助词，用于句中表示停顿。<span class="lyterm">诛</span>：谴责，斥责，这是其本义，后来才引申为讨伐，杀戮。<span class="lyexample"><span>【例】</span><span>成语“口诛笔伐”。</span></span></p></li>
+<li><p><span class="lyterm">于予与（<span class="lypinyin">yú</span>）何诛</span>。<a id="yu2a"></a><span class="lyterm"><a href="#yu2">与</a></span>：助词，作为句中停顿，使语气舒缓，自身无意义。<span class="lyterm">诛</span>：谴责，斥责，这是其本义，后来才引申为讨伐，杀戮。<span class="lyexample"><span>【例】</span><span>成语“口诛笔伐”。</span></span></p></li>
 </ul></div>
 </div>
 <a id="5.11"></a><div class="lyblob">
@@ -2598,7 +2598,7 @@ img.characterimg {
 <a id="7.30"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.30">7.30</a></div>
 <div class="lybloboriginaltext"><p>子曰：“仁远乎哉？我欲仁斯仁至矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="zhi4e"></a><span class="lyterm">至</span>：来，来到。成语“仁至义尽”的至，是程度达到最高，极的意思。<span class="lyseealso"><span>【参】</span><span><a href="#6.17" class="lyref">6.17</a>  及<a href="#daobuyuanren">引文</a>，<a href="#12.1" class="lyref">12.1</a> <span class="lyq">为仁由己</span>。《四书集注》：<span class="lyq">仁者，心之德，非在外也。放而不求，故有以为远者；反而求之，则即此而在矣，夫岂远哉？</span></span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="zhi4e"></a><span class="lyterm">至</span>：来，来到。而成语“仁至义尽”的至，是程度达到最高，极的意思。<span class="lyseealso"><span>【参】</span><span><a href="#6.17" class="lyref">6.17</a>  及<a href="#daobuyuanren">引文</a>，<a href="#12.1" class="lyref">12.1</a> <span class="lyq">为仁由己</span>。《四书集注》：<span class="lyq">仁者，心之德，非在外也。放而不求，故有以为远者；反而求之，则即此而在矣，夫岂远哉？</span></span></span></p></li></ul></div>
 </div>
 <a id="7.31"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.31">7.31</a></div>
@@ -3251,7 +3251,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>“唐棣之华，偏其反而。岂不尔思？室是远而。”子曰：“未之思也。夫何远之有？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">唐棣（<span class="lypinyin">dì</span>）之华</span> 4句诗的意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，（然而）离家太远。其出处已不可考，《论语注疏》、《四书集注》都说是《<a href="#shijing">诗经</a>》的逸诗，古注多认为是表达思慕贤人之情。</p>
+<p><span class="lyterm">唐棣（<span class="lypinyin">dì</span>）之华（<span class="lypinyin">huā</span>）</span> 4句诗的意思是：唐棣的花朵啊，摇曳翻转，怎能不思念你呀，（然而）离家太远。其出处已不可考，《论语注疏》、《四书集注》都说是《<a href="#shijing">诗经</a>》的逸诗，古注多认为是表达思慕贤人之情。</p>
 <p><span class="lyterm">华</span>：通“花”。<a id="tangdi"></a><span class="lyterm">唐棣</span>：也写作棠棣，学名为郁李，蔷薇科灌木，春季开桃红色花。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·常棣》开头用花朵与花萼的依托映衬来比拟兄弟亲情：<span class="lyq">常棣之华，鄂不韡韡。凡今之人，莫如兄弟。</span>（不：通“柎”（<span class="lypinyin">fū</span>），花萼的足。韡（<span class="lypinyin">wěi</span>）：光彩鲜明。）后来就常以棠棣比喻手足兄弟。</span></span></p>
 <p><a id="er2"></a><span class="lyterm">而</span>：无意义的句末助词，又可以表示感叹。<span class="lyexample"><span>【例】</span><span><a href="#18.5" class="lyref">18.5</a> <span class="lyq">已而，已而，今之从政者殆而！</span></span></span></p>
 <p><span class="lyterm">偏其反而</span>：喻指（本应欢聚却）相远离。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·角弓》讲兄弟亲情：<span class="lyq">骍骍角弓，翩其反矣。兄弟昏姻，无胥远矣。</span>（骍骍：形容弓已调理得灵便称手。翩其反矣：指张弓放箭时角弓两端由近而远。昏姻：指亲戚。胥：相互。）由此看来，把本章的4句诗理解为思念兄弟，由实指上升到思贤、思仁，也说得通。</span></span></p>
@@ -3291,7 +3291,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#10.3">10.3</a></div>
 <div class="lybloboriginaltext"><p>君召使摈，色勃如也，足躩如也。揖所与立，左右手，衣前后，襜如也。趋进，翼如也。宾退，必复命曰：“宾不顾矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">摈</span>（<span class="lypinyin">bìn</span>）：通“傧”（<span class="lypinyin">bīn</span>），接待宾客。<span class="lyterm">君召使摈</span>的宾语是孔子，也是后面的主语。</p></li>
+<li><p><span class="lyterm">摈</span>（<span class="lypinyin">bìn</span>）：接引宾客，后来专写作“傧”。<span class="lyterm">君召使摈</span>的宾语是孔子，也是后面的主语。</p></li>
 <li><p><span class="lyterm">勃</span>：突然，这里指表情立即庄重起来。</p></li>
 <li><p><span class="lyterm">躩</span>（<span class="lypinyin">jué</span>）：快步走的样子，有点脚不沾地的紧迫感。</p></li>
 <li><p><span class="lyterm">左右手</span>：向左向右拱手。</p></li>
@@ -4120,7 +4120,7 @@ img.characterimg {
 <a id="12.24"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#12.24">12.24</a></div>
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“君子以文会友，以友辅仁。”</p></div>
-<div class="lyblobannotation"><p>本章可以和前两章连起来理解。<span class="lyseealso"><span>【参】</span><span><a href="#1.1" class="lyref">1.1</a> 。李塨《恕谷后集·答长举问》强调了个人努力的重要：<span class="lyq">孔子曰：“<a href="#12.1">为仁由己</a>，非以由人。”师友特助己者耳，由之者九分，助之者一分也。若专倚师友，则己安在？如人修容、整巾、束带、靧面、盛服，拮据在我，而友其<a href="#jian4d">鉴</a>也，未闻以鉴为巾带、服饰也。</span>（特：仅，只是。靧（<span class="lypinyin">huì</span>）：洗脸。拮据（<span class="lypinyin">jié jū</span>）：辛勤操办。）</span></span></p></div>
+<div class="lyblobannotation"><p>本章可以和前两章连起来理解。<span class="lyseealso"><span>【参】</span><span><a href="#1.1" class="lyref">1.1</a> 。李塨《恕谷后集·答长举问》则强调了个人努力的重要：<span class="lyq">孔子曰：“<a href="#12.1">为仁由己</a>，非以由人。”师友特助己者耳，由之者九分，助之者一分也。若专倚师友，则己安在？如人修容、整巾、束带、靧面、盛服，拮据在我，而友其<a href="#jian4d">鉴</a>也，未闻以鉴为巾带、服饰也。</span>（特：仅，只是。靧（<span class="lypinyin">huì</span>）：洗脸。拮据（<span class="lypinyin">jié jū</span>）：辛勤操办。）</span></span></p></div>
 </div>
 <a id="13"></a><h1 class="lybodychapter">13. 子路</h1>
 <a id="13.1"></a><div class="lyblob">
@@ -4806,7 +4806,7 @@ img.characterimg {
 <li><p><span class="lyterm">夫子固有惑志<a href="#yu2e">于</a>公伯寮</span>：<a href="#jihuanzi">季桓子</a>先生确实让公伯寮的谗言说糊涂了（而猜疑子路）。<span class="lyterm">惑志</span>：迷乱之心，疑心。<span class="lyexample"><span>【例】</span><span>《宋史·陈襄传》：<span class="lyq">襄曰：“‘自反而缩，虽千万人往矣。’公苟有惑志，何名知己！”</span>（“自反而缩”句，引自《孟子·公孙丑上》。自反：反躬自省。缩：直。）</span></span></p></li>
 <li><p><span class="lyterm">肆诸市朝</span>：把他陈尸于市集，就是说除掉公伯寮。<span class="lyterm">肆</span>：处以死刑后陈尸示众。据郑玄注，大夫及以上肆于朝廷，士及以下肆于市集（弃市）。公伯寮是士，所以<span class="lyterm">市朝</span>偏指市集。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>清初张尔岐《蒿庵闲话》：<span class="lyq">人道之当然而不可违者，义也；天道之本然而不可争者，命也。……命不可知，君子当以义知命矣。凡义所不可，即以为命所不有也。……君子以义安命，故其心常泰。小人以智力争命，故其心多怨。众人之于命，亦有安之矣，大约皆知其无可奈何而后安之者也。圣人之于命，安之矣，实不以命为准也，而以义为准。故虽力有可争，势有可图，而退然处之，曰义之所不可也。义所不可，斯曰命矣。</span></span></span>思考：依靠不正当的手段获取“第一桶金”，然后努力“洗白”，你知道这样的例子吗？传统儒家与诸子各家持什么观点？你认同吗？</p>
+<p><span class="lyseealso"><span>【参】</span><span>清初张尔岐《蒿庵闲话》：<span class="lyq">人道之当然而不可违者，义也；天道之本然而不可争者，命也。……命不可知，君子当以义知命矣。凡义所不可，即以为命所不有也。……君子以义安命，故其心常泰。小人以智力争命，故其心多怨。众人之于命，亦有安之矣，大约皆知其无可奈何而后安之者也。圣人之于命，安之矣，实不以命为准也，而以义为准。故虽力有可争，势有可图，而退然处之，曰义之所不可也。义所不可，斯曰命矣。</span></span></span>思考：依靠不正当的手段获取“第一桶金”，然后努力“洗白”，你知道这样的例子吗？传统儒家与诸子各家持什么观点？你认同哪种？</p>
 </div>
 </div>
 <a id="14.37"></a><div class="lyblob">
@@ -4911,7 +4911,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#15.2">15.2</a></div>
 <div class="lybloboriginaltext"><p>在陈绝粮，从者病莫能兴。<a href="#zilu">子路</a>愠，见曰：“君子亦有穷乎？”子曰：“君子固穷，小人穷斯滥矣。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">病莫能兴</span>。<a id="bing4"></a><span class="lyterm">病</span>：困苦，困乏，这里指因为断粮而饿坏了。<span class="lyterm">兴</span>：起身。有的书在“病”之后加逗号，考虑到“爱莫能助”、“苦不堪言”都是耳熟能详，就不多此一举了。</p></li>
+<li><p><span class="lyterm">病莫能兴</span>。<a id="bing4"></a><span class="lyterm">病</span>：困苦，困乏，这里指因为断粮而饿坏了。<span class="lyterm">兴</span>：起身。有的书在“病”之后加逗号，考虑到结构相同的“爱莫能助”、“苦不堪言”都是耳熟能详，就不多此一举了。</p></li>
 <li><p><span class="lyterm">固穷</span>：在艰苦困境中保持意志坚定（不违仁）。<span class="lyterm"><a href="#gu4a">固</a></span>：动词，安守，坚守。<a id="qiong2"></a><span class="lyterm">穷</span>：本义为已达尽头，尽，完，引申为困窘，贫乏，又引申为不得志。反义词是<a href="#da2">达</a>。<span class="lyexample"><span>【例】</span><span>成语“穷途末路”。<a id="qiongda"></a>《孟子·尽心上》：<span class="lyq">穷则独善其身，达则兼善天下。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> <a href="#4.9" class="lyref">4.9</a> <a href="#6.7" class="lyref">6.7</a> 。《韩诗外传》第1卷第8章：<span class="lyq">厄穷而不悯，劳辱而不<a href="#gou3">苟</a>，然后有<a href="#zhi4b">致</a>也。</span>（<a id="e4b"></a>厄：困苦。<a id="min3b"></a>悯：忧伤。）</span></span></p></li>
 <li><p><span class="lyterm">滥</span>：过度，无节制，引申指抛弃操守地胡作非为，乱来。<span class="lyexample"><span>【例】</span><span>成语“宁缺勿滥”，熟语“滥用职权”。</span></span></p></li>
 </ul></div>
