--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ window.onload = function() {
 <a href="/ly" title="《论语》白文版"><img src="/img/lycover.png" alt="《论语》白文版" width="48%" style="display: block; float: right"/></a>
 </div>
 
-<p style="text-align: center">:star: 2016-6-18，Web版上线啦！<a href="/web-edition">详情……</a></p>
+<p style="text-align: center">:star: 2017-12-31，《论语》TTS有声版发布啦！<a href="/ly-tts-announcement">详情……</a></p>
+<p style="text-align: center">2016-6-18，Web版上线啦！<a href="/web-edition">详情……</a></p>
 
 <p style="text-align: center">
 PDF版下载：<a href="https://github.com/abolybook/aboly/releases" target="_blank">github.com/abolybook/aboly/releases</a>
