--- a/aboly.html
+++ b/aboly.html
@@ -2620,7 +2620,7 @@ img.characterimg {
 </li>
 <li><p><span class="lyterm">揖</span>的主语是陈司败。<span class="lyterm">进</span>：走上前，与<a href="#tui4">退</a>相反，这里是使动用法。</p></li>
 <li><p><a id="dang3b"></a><span class="lyterm"><a href="#dang3a">党</a></span>：动词，结党（营私），拉帮结派，这里指偏私，袒护。其名词义是因为共同的利益诉求而结成的集团。<span class="lyexample"><span>【例】</span><span><a href="#15.22" class="lyref">15.22</a> <span class="lyq">群而不党。</span>成语“党同伐异”。</span></span><span class="lyseealso"><span>【参】</span><span>《国语·晋语五》载，赵宣子推荐韩献子为司马，在河曲之役中，赵宣子的属下驾车扰乱部队行列，被韩献子依律处死。<span class="lyq">宣子召而礼之曰：“吾闻事君者比而不党。夫周以举义，比也；举以其私，党也。夫军事无犯，犯而不隐，义也。吾言女于君，惧女不能也。举而不能，党孰大焉？事君而党，吾何以从政？吾故以是观女。女勉之！”</span>（周：忠信。<a href="#bi3">比</a>：指正当的亲近。）</span></span></p></li>
-<li><p><span class="lyterm">取于吴，为同姓，谓之“吴孟子”</span>。<span class="lyterm">取</span>：通“娶”。鲁昭公夫人是吴宗室长女。鲁<a href="#taibo">吴</a>之君同为姬姓，按周制，同<a href="#xingshi">姓</a>不可通婚。昭公为了混淆视听，按<a href="#bozhongshuji">排行</a>含糊地称其为“孟<a href="#zi3a">子</a>”，好像是来自子姓的<a href="#songguo">宋国</a>，连“吴”都尽量隐去。前483年吴孟子去世，孔子也参加了吊唁，事见《左传·哀公十二年》。<span class="lyexample"><span>【例】</span><span>《左传》开篇第一句话（隐公元年）：<span class="lyq">惠公元妃孟子</span>，隐公之父惠公的夫人，才是宋王室长女。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·坊记》：<span class="lyq">子云：“取妻不取同姓，以厚别也。故买妾不知其姓，则卜之，以此坊民。《鲁春秋》犹去夫人之姓曰‘吴’，其死曰‘孟子卒’。”</span>（厚别：增强血缘差异性。坊：通“防”，堤防，指规范人德行的礼。）《礼记·杂记下》：<span class="lyq">夫人之不命于天子，自鲁昭公始也。</span>（命：帝王的诰令，指诸侯向周天子报告婚娶的情况后，天子为诸侯夫人赐封。）</span></span></p></li>
+<li><p><span class="lyterm">取于吴，为同姓，谓之“吴孟子”</span>。<span class="lyterm">取</span>：通“娶”。鲁<a href="#taibo">吴</a>之君同为姬<a href="#xingshi">姓</a>，鲁昭公夫人是吴宗室长女，本应按姓称为“吴姬”或“孟姬”。周制同姓不可通婚，昭公为了混淆视听，按<a href="#bozhongshuji">排行</a>含糊地称其为“孟<a href="#zi3a">子</a>”，好像是来自子姓的<a href="#songguo">宋国</a>，连“吴”都尽量隐去。前483年吴孟子去世，孔子也参加了吊唁，事见《左传·哀公十二年》。<span class="lyexample"><span>【例】</span><span>《左传》开篇第一句话（隐公元年）：<span class="lyq">惠公元妃孟子</span>，即隐公之父惠公的夫人，才是宋王室长女。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·坊记》：<span class="lyq">子云：“取妻不取同姓，以厚别也。故买妾不知其姓，则卜之，以此坊民。《鲁春秋》犹去夫人之姓曰‘吴’，其死曰‘孟子卒’。”</span>（厚别：增强血缘差异。坊：通“防”，堤防，指规范人德行的礼。）《礼记·杂记下》：<span class="lyq">夫人之不命于天子，自鲁昭公始也。</span>（命：帝王的诰令，指诸侯向周天子报告婚娶的情况后，天子为诸侯夫人赐封。）</span></span></p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》9:8：<span class="lyqe">Reprove not a scorner, lest he hate thee: rebuke a wise man, and he will love thee.</span>（<span class="lyq">不要责备亵慢人，恐怕他恨你。要责备智慧人，他必爱你。</span>）</span></span></p>
 </div>
@@ -2757,7 +2757,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="liuchizhigu"></a><span class="lyterm">托六尺之孤</span>：托付未成年的遗孤。<span class="lyterm">托孤</span>特指君主临终前把（即将成为孤儿的）幼主托付出去。古代<span class="lyterm">六尺</span>指未成年，即15岁以下；七尺指20岁。<a id="chi3"></a><span class="lyterm">尺</span>的实际长度随着时代演变，总体上越往古代越短。周朝1尺约合20.1厘米，六尺约为1.2米；秦汉的1尺就增至23.1厘米。<a id="bu4"></a>另据《周礼·地官司徒·小司徒》郑玄注引《司马法》，六尺即为一<span class="lykeyword">步</span>。</p></li>
 <li><p><span class="lyterm">寄百里之<a href="#ming4">命</a></span>：古注多解释为寄托整个国家的政令，意指暂时代理国政。如果和前面的“托孤”连起来看，明显的例子是<a href="#zhougong">周公</a>为成王摄政。也不妨分开理解，即寄托整个国家的命运。<span class="lyterm">百里</span>属于<a href="#bingyi">诸侯国</a>的规模，这里未必是实指。</p></li>
-<li><p><a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。《后汉书·明帝纪》载，明帝登基后，封赏开国元勋邓禹、同母弟刘苍，诏书中赞扬他们<span class="lyq">可以受六尺之托，临大节而不<a href="#nao2">挠</a></span>，就是借用了本章。</span></span><span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">须是才节兼全，方谓之君子。若无其才而徒有其节，虽死何益！……故伊川说：“君子者，才德出众之名。”孔子曰：“<a href="#2.12">君子不器</a>。”既曰君子，须是事事理会得方可。</span>（伊川：程颐，北宋理学家，洛阳伊川人。）</span></span></p></li>
+<li><p><a id="dajie"></a><span class="lyterm">大节</span>：大事，特指关系到国家、民族安危存亡的大事，或关系到个人名誉节操的大事。<a id="jie2c"></a><span class="lyterm">节</span>：本义为竹节，引申为事项，准则，操守。<span class="lyexample"><span>【例】</span><span>古书中常有国之大节、礼之大节、忠孝大节、大节无亏之类的说法。《后汉书·明帝纪》载，明帝登基后，封赏开国元勋邓禹、同母弟刘苍，诏书中赞扬他们<span class="lyq">可以受六尺之托，临大节而不<a href="#nao2">挠</a></span>，就是借用了本章。</span></span><span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">须是才节兼全，方谓之君子。若无其才而徒有其节，虽死何益！……故伊川说：“君子者，才德出众之名。”孔子曰：“<a href="#2.12">君子不器</a>。”既曰君子，须是事事理会得方可。</span>（伊川：程颐，北宋理学家，洛阳伊川人。）</span></span></p></li>
 <li><p><a id="duo2"></a><span class="lyterm">夺</span>：本义为强取，引申为迫使意志、信念等产生动摇或改变。<span class="lyexample"><span>【例】</span><span><a href="#9.26" class="lyref">9.26</a> <span class="lyq">三军可夺帅也，匹夫不可夺志也。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -2904,7 +2904,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="tangyu"></a><span class="lyterm">唐虞</span>：指<a href="#yao">尧帝</a>、<a href="#shun">舜帝</a>统治天下的时期。古代常以建国之地的名称作为国号及氏。尧被封于陶，后迁至<span class="lyterm">唐</span>（今山西省临汾市一带），其国号及氏均为陶唐。舜建都于<span class="lyterm">虞</span>（在今山西省永济市），其国号及氏均为有虞。</p>
-<p><a id="xingshi"></a><span class="lykeyword">氏</span>是姓的分支。母系社会的家族成员随母姓，到了父系社会则随父姓。上古8大姓：姜、姬、姚、嬴、姒、妘（<span class="lypinyin">yún</span>）、妫（<span class="lypinyin">guī</span>）、妊（<span class="lypinyin">rèn</span>），均从女字旁。随着家族的分化迁移，每个支系除了保留原姓以外，会再取一个氏作为自己一支的标志。随着东周宗法制度的瓦解，姓和氏逐渐混同，合称“姓氏”或者简称为“姓”了。</p>
+<p><a id="xingshi"></a><span class="lykeyword">氏</span>是姓的分支。家族有<span class="lykeyword">姓</span>，母系社会的家族成员随母姓，到了父系社会则随父姓。上古8大姓：姜、姬、姚、嬴、姒、妘（<span class="lypinyin">yún</span>）、妫（<span class="lypinyin">guī</span>）、妊（<span class="lypinyin">rèn</span>），均从女字旁。随着家族的分化迁移，每个支系除了保留原姓以外，会取一个氏作为自己一支的标志，比如以封国、居住地、官名、祖先的字或谥号、独特的技能等等。姓代表血缘，区别婚姻，氏则代表身份贵贱，平民有名而无氏。随着东周宗法制度的瓦解，姓和氏逐渐混同，合称“姓氏”或者简称“姓”，平民也有百姓了。</p>
 </li>
 <li>
 <p><a id="sanfentianxia"></a><span class="lyterm">三分天下有其二</span>：《尚书·虞夏书·禹贡》载，大禹治理洪水时，划定天下为九州：冀、兖（<span class="lypinyin">yǎn</span>）、青、徐、扬、荆、豫、梁、雍。至<a href="#zhou">殷纣王</a>时，周文王<a href="#wen">姬昌</a>修德行善，六州已听命于周，且与殷商有杀父之仇，但仍不叛纣。孔子这里推崇的，实际上是他<a href="#junchenfuzi">君君臣臣</a>的政治理想。</p>
@@ -5359,7 +5359,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#16.12">16.12</a></div>
 <div class="lybloboriginaltext"><p><a href="#qijinggong">齐景公</a>有马千驷，死之日，民无德而称焉；<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>饿于首阳之下，民到于今称之。其斯之谓与？</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">有马千<a href="#si4">驷</a></span>是齐景公奢侈游逸生活的一个侧影。<span class="lyterm">马</span>指私养玩赏用的良种马，而非军马或与民同乐者，相当于花公款炫富。<span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》：<span class="lyq">〔景公〕他日又复问政于孔子，孔子曰：“政在节财。”</span>（节财：指削减公费开支。）</span></span></p></li>
+<li><p><span class="lyterm">有马千<a href="#si4">驷</a></span>是齐景公奢侈游逸生活的一个侧影。<span class="lyterm">马</span>指私养玩赏用的良种马，而非军马或与民同乐者，在现代就相当于花公款炫富。<span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》：<span class="lyq">〔景公〕他日又复问政于孔子，孔子曰：“政在节财。”</span>（节财：指削减公费开支。）</span></span></p></li>
 <li><p><span class="lyterm">其斯之谓与？</span>：指的应该就是这个吧？本章疑有缺漏，所指无法确考。有认为 <a href="#12.10" class="lyref">12.10</a>  引用的<span class="lyq">诚不以富，亦只以异</span>应该移到本句之前。<span class="lyseealso"><span>【参】</span><span><a href="#15.25" class="lyref">15.25</a> </span></span></p></li>
 </ul></div>
 </div>
@@ -5475,7 +5475,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#17.6">17.6</a></div>
 <div class="lybloboriginaltext"><p><a href="#zizhang">子张</a>问仁于孔子，孔子曰：“能行五者于天下，为仁矣。”请问之，曰：“恭、宽、信、敏、惠。恭则不侮，宽则得众，信则人任焉，敏则有功，惠则足以使人。”</p></div>
 <div class="lyblobannotation">
-<p>本章论仁政，“于天下为仁”者，而非修身之仁。</p>
+<p>本章论仁政，“于天下为仁”者，而非修身之仁。可以比较 <a href="#1.10" class="lyref">1.10</a> <span class="lyq">温、良、恭、俭、让</span>。</p>
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">不<a href="#wu3">侮</a></span>：不被人轻视慢待。<span class="lyseealso"><span>【参】</span><span><a href="#8.4" class="lyref">8.4</a> <span class="lyq">动容貌，斯远暴慢矣。</span></span></span></p></li>
 <li><p><span class="lyterm"><a href="#ren4a">任</a></span>：使担当职责或职务，即信任，信赖。</p></li>
@@ -5623,7 +5623,7 @@ img.characterimg {
 <p><a href="#zigong">子贡</a>曰：“子如不言，则小子何述焉？”</p>
 <p>子曰：“天何言哉？四时行焉，百物生焉。天何言哉？”</p>
 </div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的“无为而治”、<a href="#12.13" class="lyref">12.13</a>  的“无讼而律”相似，“不言而教”也是孔子向往的吧。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">小子何述焉？</span>：我们当弟子的怎么记述传承呢？孔子为什么突然不想说话，难以确解，也留下了很多想象空间。子贡在 <a href="#5.13" class="lyref">5.13</a> ，追思了孔子不言的内容。颜回在 <a href="#9.11" class="lyref">9.11</a> ，描述了孔子善言的风采。与 <a href="#15.5" class="lyref">15.5</a>  的“无为而治”、<a href="#12.13" class="lyref">12.13</a>  的“无讼之律”相似，“不言而教”也是孔子向往的吧。</p></li></ul></div>
 </div>
 <a id="17.20"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#17.20">17.20</a></div>
@@ -5754,7 +5754,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p><a href="#qijinggong">齐景公</a>待孔子曰：“若<a href="#jishi">季氏</a>，则吾不能。”以<a href="#jishi">季</a>、<a href="#mengshi">孟</a>之间待之。曰：“吾老矣，不能用也。”孔子行。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p> 前面的<span class="lyterm">待孔子曰</span>，也许是和大臣们商议给孔子的待遇。后面的<span class="lyterm">曰</span>，也许是过了一段时间之后，重新自我认识的话。</p></li>
-<li><p><span class="lyterm">若季氏，则吾不能</span>：指齐景公无法以鲁君对季氏的同等规格来任用孔子。<span class="lyterm">季、孟之间</span>是介于季氏和孟氏的待遇，虽非专听专信，仍然很隆重。可后来有齐国大夫忌害孔子，孔子告诉景公，景公爱莫能助，可能也自愧无法达到孔子的期望，才会发出<span class="lyterm">吾老矣，不能用也</span>的慨叹，事见《史记·孔子世家》。<span class="lyseealso"><span>【参】</span><span>清代崔述认为：<span class="lyq">景公是时年仅四五十岁，其后复在位二十余年，岁会诸侯，赏战士，与晋争霸，亦不当云“老不能用”也。</span>但景公既非励精图治之君，又无法预知后事，这应是一时一地的心境。</span></span></p></li>
+<li><p><span class="lyterm">若季氏，则吾不能</span>：指齐景公无法以鲁君对季氏的同等规格来任用孔子。<span class="lyterm">季、孟之间</span>是介于季氏和孟氏的待遇，虽非专听专信，仍然很隆重。可后来有齐国大夫忌害孔子，孔子告诉景公，景公爱莫能助，可能也自愧无法达到孔子的期望，才会发出<span class="lyterm">吾老矣，不能用也</span>的慨叹，事见《史记·孔子世家》。<span class="lyseealso"><span>【参】</span><span>清代崔述认为：<span class="lyq">景公是时年仅四五十岁，其后复在位二十余年，岁会诸侯，赏战士，与晋争霸，亦不当云“老不能用”也。</span>但景公既非励精图治之君，又无法预知后事，这应是一时一地的心境。</span></span>也有不同意《史记》的观点，认为后一句是孔子推辞的话。</p></li>
 </ul></div>
 </div>
 <a id="18.4"></a><div class="lyblob">
@@ -5965,7 +5965,7 @@ img.characterimg {
 <li><p><span class="lyterm">大德</span>：即<a href="#dajie">大节</a>。</p></li>
 <li><p><span class="lyterm">闲</span>：本义为门栅栏，引申为范围，界限。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>也许子夏是引用孔子的话。据《韩诗外传》第2卷第16章，有一次孔子在外偶遇齐国贤士程本子，<span class="lyq">倾盖而语终日</span>。（<a id="qinggai"></a>倾盖：两车靠得很紧，顶上的伞盖都挤歪了。后有成语“倾盖如故”。）孔子让<a href="#zilu">子路</a>取束帛相赠，子路认为不合于礼：<span class="lyq">士不中道相见</span>。孔子回答：<span class="lyq">吾于是而不赠，终身不之见也。大德不逾闲，小德出入可也。</span></span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>本章也许是子夏引用孔子的话。据《韩诗外传》第2卷第16章，有一次孔子在外偶遇齐国贤士程本子，<span class="lyq">倾盖而语终日</span>。（<a id="qinggai"></a>倾盖：两车靠得很紧，顶上的伞盖都挤歪了。后有成语“倾盖如故”。）孔子让<a href="#zilu">子路</a>取束帛相赠，子路认为不合于礼：<span class="lyq">士不中道相见</span>。孔子回答：<span class="lyq">吾于是而不赠，终身不之见也。大德不逾闲，小德出入可也。</span></span></span></p>
 </div>
 </div>
 <a id="19.12"></a><div class="lyblob">
@@ -6001,7 +6001,7 @@ img.characterimg {
 <a id="19.16"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.16">19.16</a></div>
 <div class="lybloboriginaltext"><p><a href="#zengshen">曾子</a>曰：“堂堂乎<a href="#zizhang">张</a>也，难与并为仁矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">堂堂</span>：志气宏大的样子。<span class="lyexample"><span>【例】</span><span>岳飞《驻兵新淦（<span class="lypinyin">gàn</span>）题伏魔寺壁》：<span class="lyq">胆气堂堂贯斗牛，誓将直节报君仇。</span>（斗（<span class="lypinyin">dǒu</span>）牛：二十八星宿中的斗宿和牛宿，用以形容胆气冲天。君仇：指导致北宋灭亡的靖康之耻。）</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">堂堂</span>：志气宏大的样子。<span class="lyexample"><span>【例】</span><span>岳飞《驻兵新淦（<span class="lypinyin">gàn</span>）题伏魔寺壁》：<span class="lyq">胆气堂堂贯斗牛，誓将直<a href="#jie2c">节</a>报君仇。</span>（斗（<span class="lypinyin">dǒu</span>）牛：二十八星宿中的斗宿和牛宿，用以形容胆气冲天。君仇：指导致北宋灭亡的靖康之耻。）</span></span></p></li></ul></div>
 </div>
 <a id="19.17"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.17">19.17</a></div>
