--- a/ly.html
+++ b/ly.html
@@ -1343,7 +1343,7 @@ a:link {
 </div>
 <a id="9.12"></a><div class="lyblob">
 <div class="lyblobtag"><a href="aboly#9.12">9.12</a></div>
-<div class="lytext"><p>子疾病，子路使门人为臣。病间曰：“久矣哉，由之行诈也！无臣而为有臣，吾谁欺？欺天乎？且予与其死于臣之手也，无宁死于二三子之手乎！且予纵不得大葬，予死于道路乎？”</p></div>
+<div class="lytext"><p>子疾病，子路使门人为臣。病间，曰：“久矣哉，由之行诈也！无臣而为有臣，吾谁欺？欺天乎？且予与其死于臣之手也，无宁死于二三子之手乎！且予纵不得大葬，予死于道路乎？”</p></div>
 </div>
 <a id="9.13"></a><div class="lyblob">
 <div class="lyblobtag"><a href="aboly#9.13">9.13</a></div>
